# jazz-calendar-helsinki-unified

./: .gitignore  README.md  pyproject.toml
.claude/memory/: MEMORY.md  feedback_mass_replace.md  validate_dedup_script.md
.github/workflows/: refresh.yml  test.yml
docs/: calendar.ics  index.html
docs/superpowers/plans/: 2026-04-27-jazz-calendar-merger.md
docs/superpowers/specs/: 2026-04-27-jazz-calendar-merger-design.md
scripts/: validate_dedup.py
src/jazz_calendar/: dedup.py  fetch.py  merge.py  normalize.py  patch.py  source.py  window.py
tests/: test_dedup.py  test_fetch.py  test_merge.py  test_normalize.py  test_patch.py  test_source.py  test_window.py
tests/fixtures/: README.md  manala_collision_gcal.ics  manala_collision_suomijazz.ics  missing_dtstart.ics  recurring_open_ended.ics  recurring_with_until.ics  suomijazz.ics
