[project]
name = "jazz-calendar-finland"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "icalendar>=7,<8",
]

[dependency-groups]
dev = [
    "pytest>=9,<10",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "jazz_calendar"
